# fastapi-celery-blueprint

./: .env  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  supervisord.conf
alembic/: env.py
app/: backend_pre_start.py  celeryworker_pre_start.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: items.py  login.py  tasks.py  users.py  utils.py
app/core/: config.py  security.py
app/crud/: base.py  crud_item.py  crud_user.py
app/db/: base_class.py  init_db.py
app/models/: item.py  user.py
app/schemas/: __init__.py  async_task.py  celery.py  user.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py
app/worker/: celery_app.py  celeryconfig.py  utils.py
app/worker/tasks/: __init__.py  task1.py
