[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.9.1"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
sqlalchemy = "^1.3.16"
pytest = "^7.1.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^0.20.0"
mypy = "^0.960"
sqlalchemy-stubs = "^0.4"
celery = {extras = ["sqlalchemy"], version = "^5.2.7"}

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pylint = "^2.14.0"