[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.9.1"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
sqlalchemy = "^1.3.16"
pytest = "^7.1.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^0.20.0"
sqlalchemy-stubs = "^0.4"
celery = {extras = ["redis"], version = "^5.2.7"}
flower = "^1.0.0"
sqlacodegen = "^2.3.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pylint = "^2.14.0"
autoflake = "^1.4"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
